--- a/public/css/wu.css
+++ b/public/css/wu.css
@@ -2,20 +2,25 @@
     margin: 20px;
     border: 3px dashed #e6e6e6;
 }
+
 #uploader .queueList.filled {
     padding: 17px;
     margin: 0;
     border: 3px dashed transparent;
 }
+
 #uploader .queueList.webuploader-dnd-over {
     border: 3px dashed #999999;
 }
 
-#uploader p {margin: 0;}
+#uploader p {
+    margin: 0;
+}
 
 .element-invisible {
     position: absolute !important;
-    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px 1px 1px 1px);
+    /* IE6, IE7 */
     clip: rect(1px,1px,1px,1px);
 }
 
@@ -55,10 +60,12 @@
     text-align: center;
     bottom: 20px;
 }
+
 #uploader .placeholder .flashTip a {
     color: #0785d1;
     text-decoration: none;
 }
+
 #uploader .placeholder .flashTip a:hover {
     text-decoration: underline;
 }
@@ -103,7 +110,7 @@
     width: 100%;
     overflow: hidden;
     white-space: nowrap;
-    text-overflow : ellipsis;
+    text-overflow: ellipsis;
     top: 5px;
     text-indent: 5px;
     text-align: left;
@@ -122,25 +129,23 @@
     background: none;
     -webkit-box-shadow: 0 0 0;
 }
+
 #uploader .filelist li p.progress span {
     display: none;
     overflow: hidden;
     width: 0;
     height: 100%;
     background: #1483d8 url(https://cdn.jsdelivr.net/npm/webuploader@0.1.8/_draft/music/progress.png) repeat-x;
-
     -webit-transition: width 200ms linear;
     -moz-transition: width 200ms linear;
     -o-transition: width 200ms linear;
     -ms-transition: width 200ms linear;
     transition: width 200ms linear;
-
     -webkit-animation: progressmove 2s linear infinite;
     -moz-animation: progressmove 2s linear infinite;
     -o-animation: progressmove 2s linear infinite;
     -ms-animation: progressmove 2s linear infinite;
     animation: progressmove 2s linear infinite;
-
     -webkit-transform: translateZ(0);
 }
 
@@ -148,22 +153,27 @@
     0% {
         background-position: 0 0;
     }
+
     100% {
         background-position: 17px 0;
     }
 }
+
 @-moz-keyframes progressmove {
     0% {
         background-position: 0 0;
     }
+
     100% {
         background-position: 17px 0;
     }
 }
+
 @keyframes progressmove {
     0% {
         background-position: 0 0;
     }
+
     100% {
         background-position: 17px 0;
     }
@@ -177,13 +187,11 @@
     overflow: hidden;
     width: 110px;
     height: 110px;
-
     -webkit-transform-origin: 50% 50%;
     -moz-transform-origin: 50% 50%;
     -o-transform-origin: 50% 50%;
     -ms-transform-origin: 50% 50%;
     transform-origin: 50% 50%;
-
     -webit-transition: 200ms ease-out;
     -moz-transition: 200ms ease-out;
     -o-transition: 200ms ease-out;
@@ -245,6 +253,7 @@
 #uploader .filelist div.file-panel span.rotateLeft {
     background-position: 0 -24px;
 }
+
 #uploader .filelist div.file-panel span.rotateLeft:hover {
     background-position: 0 0;
 }
@@ -252,6 +261,7 @@
 #uploader .filelist div.file-panel span.rotateRight {
     background-position: -24px -24px;
 }
+
 #uploader .filelist div.file-panel span.rotateRight:hover {
     background-position: -24px 0;
 }
@@ -259,6 +269,7 @@
 #uploader .filelist div.file-panel span.cancel {
     background-position: -48px -24px;
 }
+
 #uploader .filelist div.file-panel span.cancel:hover {
     background-position: -48px 0;
 }
@@ -285,6 +296,7 @@
     position: relative;
     margin: 0 10px 0 0;
 }
+
 #uploader .statusBar .progress span.percentage {
     width: 0;
     height: 100%;
@@ -293,6 +305,7 @@
     background: #1483d8;
     position: absolute;
 }
+
 #uploader .statusBar .progress span.text {
     position: relative;
     z-index: 10;
@@ -331,6 +344,7 @@
     font-size: 14px;
     float: left;
 }
+
 #uploader .statusBar .btns .webuploader-pick-hover,
 #uploader .statusBar .btns .uploadBtn:hover,
 #uploader .statusBar .btns .uploadBtn.state-uploading:hover,
@@ -343,6 +357,7 @@
     color: #fff;
     border-color: transparent;
 }
+
 #uploader .statusBar .btns .uploadBtn:hover {
     background: #00a2d4;
 }
