--- a/public/css/wu.css
+++ b/public/css/wu.css
@@ -1,368 +1,1 @@
-#uploader .queueList {
-    margin: 20px;
-    border: 3px dashed #e6e6e6;
-}
-
-#uploader .queueList.filled {
-    padding: 17px;
-    margin: 0;
-    border: 3px dashed transparent;
-}
-
-#uploader .queueList.webuploader-dnd-over {
-    border: 3px dashed #999999;
-}
-
-#uploader p {
-    margin: 0;
-}
-
-.element-invisible {
-    position: absolute !important;
-    clip: rect(1px 1px 1px 1px);
-    /* IE6, IE7 */
-    clip: rect(1px,1px,1px,1px);
-}
-
-#uploader .placeholder {
-    min-height: 350px;
-    padding-top: 178px;
-    text-align: center;
-    background: url(https://cdn.jsdelivr.net/npm/webuploader@0.1.8/_draft/music/image.png) center 93px no-repeat;
-    color: #cccccc;
-    font-size: 18px;
-    position: relative;
-}
-
-#uploader .placeholder .webuploader-pick {
-    font-size: 18px;
-    background: #00b7ee;
-    border-radius: 3px;
-    line-height: 44px;
-    padding: 0 30px;
-    *width: 120px;
-    color: #fff;
-    display: inline-block;
-    margin: 0 auto 20px auto;
-    cursor: pointer;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-}
-
-#uploader .placeholder .webuploader-pick-hover {
-    background: #00a2d4;
-}
-
-#uploader .placeholder .flashTip {
-    color: #666666;
-    font-size: 12px;
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    bottom: 20px;
-}
-
-#uploader .placeholder .flashTip a {
-    color: #0785d1;
-    text-decoration: none;
-}
-
-#uploader .placeholder .flashTip a:hover {
-    text-decoration: underline;
-}
-
-#uploader .filelist {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-#uploader .filelist:after {
-    content: '';
-    display: block;
-    width: 0;
-    height: 0;
-    overflow: hidden;
-    clear: both;
-}
-
-#uploader .filelist li {
-    width: 110px;
-    height: 110px;
-    background: url(https://cdn.jsdelivr.net/npm/webuploader@0.1.8/_draft/music/bg.png) no-repeat;
-    text-align: center;
-    margin: 0 8px 20px 0;
-    position: relative;
-    display: inline;
-    float: left;
-    overflow: hidden;
-    font-size: 12px;
-}
-
-#uploader .filelist li p.log {
-    position: relative;
-    top: -45px;
-}
-
-#uploader .filelist li p.title {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    top: 5px;
-    text-indent: 5px;
-    text-align: left;
-}
-
-#uploader .filelist li p.progress {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    height: 8px;
-    overflow: hidden;
-    z-index: 50;
-    margin: 0;
-    border-radius: 0;
-    background: none;
-    -webkit-box-shadow: 0 0 0;
-}
-
-#uploader .filelist li p.progress span {
-    display: none;
-    overflow: hidden;
-    width: 0;
-    height: 100%;
-    background: #1483d8 url(https://cdn.jsdelivr.net/npm/webuploader@0.1.8/_draft/music/progress.png) repeat-x;
-    -webit-transition: width 200ms linear;
-    -moz-transition: width 200ms linear;
-    -o-transition: width 200ms linear;
-    -ms-transition: width 200ms linear;
-    transition: width 200ms linear;
-    -webkit-animation: progressmove 2s linear infinite;
-    -moz-animation: progressmove 2s linear infinite;
-    -o-animation: progressmove 2s linear infinite;
-    -ms-animation: progressmove 2s linear infinite;
-    animation: progressmove 2s linear infinite;
-    -webkit-transform: translateZ(0);
-}
-
-@-webkit-keyframes progressmove {
-    0% {
-        background-position: 0 0;
-    }
-
-    100% {
-        background-position: 17px 0;
-    }
-}
-
-@-moz-keyframes progressmove {
-    0% {
-        background-position: 0 0;
-    }
-
-    100% {
-        background-position: 17px 0;
-    }
-}
-
-@keyframes progressmove {
-    0% {
-        background-position: 0 0;
-    }
-
-    100% {
-        background-position: 17px 0;
-    }
-}
-
-#uploader .filelist li p.imgWrap {
-    position: relative;
-    z-index: 2;
-    line-height: 110px;
-    vertical-align: middle;
-    overflow: hidden;
-    width: 110px;
-    height: 110px;
-    -webkit-transform-origin: 50% 50%;
-    -moz-transform-origin: 50% 50%;
-    -o-transform-origin: 50% 50%;
-    -ms-transform-origin: 50% 50%;
-    transform-origin: 50% 50%;
-    -webit-transition: 200ms ease-out;
-    -moz-transition: 200ms ease-out;
-    -o-transition: 200ms ease-out;
-    -ms-transition: 200ms ease-out;
-    transition: 200ms ease-out;
-}
-
-#uploader .filelist li img {
-    width: 100%;
-}
-
-#uploader .filelist li p.error {
-    background: #f43838;
-    color: #fff;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 28px;
-    line-height: 28px;
-    width: 100%;
-    z-index: 100;
-}
-
-#uploader .filelist li .success {
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 40px;
-    width: 100%;
-    z-index: 200;
-    background: url(https://cdn.jsdelivr.net/npm/webuploader@0.1.8/_draft/music/success.png) no-repeat right bottom;
-}
-
-#uploader .filelist div.file-panel {
-    position: absolute;
-    height: 0;
-    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#80000000', endColorstr='#80000000')\0;
-    background: rgba( 0, 0, 0, 0.5 );
-    width: 100%;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    z-index: 300;
-}
-
-#uploader .filelist div.file-panel span {
-    width: 24px;
-    height: 24px;
-    display: inline;
-    float: right;
-    text-indent: -9999px;
-    overflow: hidden;
-    background: url(https://cdn.jsdelivr.net/npm/webuploader@0.1.8/_draft/music/icons.png) no-repeat;
-    margin: 5px 1px 1px;
-    cursor: pointer;
-}
-
-#uploader .filelist div.file-panel span.rotateLeft {
-    background-position: 0 -24px;
-}
-
-#uploader .filelist div.file-panel span.rotateLeft:hover {
-    background-position: 0 0;
-}
-
-#uploader .filelist div.file-panel span.rotateRight {
-    background-position: -24px -24px;
-}
-
-#uploader .filelist div.file-panel span.rotateRight:hover {
-    background-position: -24px 0;
-}
-
-#uploader .filelist div.file-panel span.cancel {
-    background-position: -48px -24px;
-}
-
-#uploader .filelist div.file-panel span.cancel:hover {
-    background-position: -48px 0;
-}
-
-#uploader .statusBar {
-    height: 63px;
-    border-top: 1px solid #dadada;
-    padding: 0 20px;
-    line-height: 63px;
-    vertical-align: middle;
-    position: relative;
-}
-
-#uploader .statusBar .progress {
-    border: 1px solid #1483d8;
-    width: 198px;
-    background: #fff;
-    height: 18px;
-    position: relative;
-    display: inline-block;
-    text-align: center;
-    line-height: 20px;
-    color: #6dbfff;
-    position: relative;
-    margin: 0 10px 0 0;
-}
-
-#uploader .statusBar .progress span.percentage {
-    width: 0;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: #1483d8;
-    position: absolute;
-}
-
-#uploader .statusBar .progress span.text {
-    position: relative;
-    z-index: 10;
-}
-
-#uploader .statusBar .info {
-    display: inline-block;
-    font-size: 14px;
-    color: #666666;
-}
-
-#uploader .statusBar .btns {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    line-height: 40px;
-}
-
-#filePicker2 {
-    display: inline-block;
-    float: left;
-}
-
-#uploader .statusBar .btns .webuploader-pick,
-#uploader .statusBar .btns .uploadBtn,
-#uploader .statusBar .btns .uploadBtn.state-uploading,
-#uploader .statusBar .btns .uploadBtn.state-paused {
-    background: #ffffff;
-    border: 1px solid #cfcfcf;
-    color: #565656;
-    padding: 0 18px;
-    display: inline-block;
-    border-radius: 3px;
-    margin-left: 10px;
-    cursor: pointer;
-    font-size: 14px;
-    float: left;
-}
-
-#uploader .statusBar .btns .webuploader-pick-hover,
-#uploader .statusBar .btns .uploadBtn:hover,
-#uploader .statusBar .btns .uploadBtn.state-uploading:hover,
-#uploader .statusBar .btns .uploadBtn.state-paused:hover {
-    background: #f0f0f0;
-}
-
-#uploader .statusBar .btns .uploadBtn {
-    background: #00b7ee;
-    color: #fff;
-    border-color: transparent;
-}
-
-#uploader .statusBar .btns .uploadBtn:hover {
-    background: #00a2d4;
-}
-
-#uploader .statusBar .btns .uploadBtn.disabled {
-    pointer-events: none;
-    opacity: 0.6;
-}
+#uploader .queueList{margin:20px;border:3px dashed #e6e6e6}#uploader .queueList.filled{margin:0;padding:17px;border:3px dashed transparent}#uploader .queueList.webuploader-dnd-over{border:3px dashed #999}#uploader p{margin:0}.element-invisible{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}#uploader .placeholder{position:relative;padding-top:178px;min-height:350px;background:url(https://cdn.jsdelivr.net/npm/webuploader@0.1.8/_draft/music/image.png) center 93px no-repeat;color:#ccc;text-align:center;font-size:18px}#uploader .placeholder .webuploader-pick{display:inline-block;margin:0 auto 20px;padding:0 30px;border-radius:3px;background:#00b7ee;box-shadow:0 1px 1px rgba(0,0,0,.1);color:#fff;font-size:18px;line-height:44px;cursor:pointer}#uploader .placeholder .webuploader-pick-hover{background:#00a2d4}#uploader .placeholder .flashTip{position:absolute;bottom:20px;width:100%;color:#666;text-align:center;font-size:9pt}#uploader .placeholder .flashTip a{color:#0785d1;text-decoration:none}#uploader .placeholder .flashTip a:hover{text-decoration:underline}#uploader .filelist{margin:0;padding:0;list-style:none}#uploader .filelist:after{clear:both;display:block;overflow:hidden;width:0;height:0;content:''}#uploader .filelist li{position:relative;float:left;display:inline;overflow:hidden;margin:0 8px 20px 0;width:110px;height:110px;background:url(https://cdn.jsdelivr.net/npm/webuploader@0.1.8/_draft/music/bg.png) no-repeat;text-align:center;font-size:9pt}#uploader .filelist li p.log{position:relative;top:-45px}#uploader .filelist li p.title{position:absolute;top:0;top:5px;left:0;overflow:hidden;width:100%;text-align:left;text-indent:5px;text-overflow:ellipsis;white-space:nowrap}#uploader .filelist li p.progress{position:absolute;bottom:0;left:0;z-index:50;overflow:hidden;margin:0;width:100%;height:8px;border-radius:0;background:0 0;-webkit-box-shadow:0 0 0}#uploader .filelist li p.progress span{display:none;overflow:hidden;width:0;height:100%;background:#1483d8 url(https://cdn.jsdelivr.net/npm/webuploader@0.1.8/_draft/music/progress.png) repeat-x;transition:width .2s linear;-webkit-transform:translateZ(0);-webit-transition:width .2s linear;-webkit-animation:progressmove 2s linear infinite;animation:progressmove 2s linear infinite}@-webkit-keyframes progressmove{0%{background-position:0 0}to{background-position:17px 0}}@keyframes progressmove{0%{background-position:0 0}to{background-position:17px 0}}#uploader .filelist li p.imgWrap{position:relative;z-index:2;overflow:hidden;width:110px;height:110px;vertical-align:middle;line-height:110px;transition:.2s ease-out;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webit-transition:.2s ease-out}#uploader .filelist li img{width:100%}#uploader .filelist li p.error{position:absolute;bottom:0;left:0;z-index:100;width:100%;height:28px;background:#f43838;color:#fff;line-height:28px}#uploader .filelist li .success{position:absolute;bottom:0;left:0;z-index:200;display:block;width:100%;height:40px;background:url(https://cdn.jsdelivr.net/npm/webuploader@0.1.8/_draft/music/success.png) no-repeat right bottom}#uploader .filelist div.file-panel{position:absolute;top:0;left:0;z-index:300;overflow:hidden;width:100%;height:0;background:rgba(0,0,0,.5);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr='#80000000', endColorstr='#80000000')\9}#uploader .filelist div.file-panel span{float:right;display:inline;overflow:hidden;margin:5px 1px 1px;width:24px;height:24px;background:url(https://cdn.jsdelivr.net/npm/webuploader@0.1.8/_draft/music/icons.png) no-repeat;text-indent:-9999px;cursor:pointer}#uploader .filelist div.file-panel span.rotateLeft{background-position:0 -24px}#uploader .filelist div.file-panel span.rotateLeft:hover{background-position:0 0}#uploader .filelist div.file-panel span.rotateRight{background-position:-24px -24px}#uploader .filelist div.file-panel span.rotateRight:hover{background-position:-24px 0}#uploader .filelist div.file-panel span.cancel{background-position:-3pc -24px}#uploader .filelist div.file-panel span.cancel:hover{background-position:-3pc 0}#uploader .statusBar{position:relative;padding:0 20px;height:63px;border-top:1px solid #dadada;vertical-align:middle;line-height:63px}#uploader .statusBar .progress{position:relative;display:inline-block;margin:0 10px 0 0;width:198px;height:18px;border:1px solid #1483d8;background:#fff;color:#6dbfff;text-align:center;line-height:20px}#uploader .statusBar .progress span.percentage{position:absolute;top:0;left:0;width:0;height:100%;background:#1483d8}#uploader .statusBar .progress span.text{position:relative;z-index:10}#uploader .statusBar .info{display:inline-block;color:#666;font-size:14px}#uploader .statusBar .btns{position:absolute;top:10px;right:20px;line-height:40px}#filePicker2{float:left;display:inline-block}#uploader .statusBar .btns .uploadBtn,#uploader .statusBar .btns .uploadBtn.state-paused,#uploader .statusBar .btns .uploadBtn.state-uploading,#uploader .statusBar .btns .webuploader-pick{float:left;display:inline-block;margin-left:10px;padding:0 18px;border:1px solid #cfcfcf;border-radius:3px;background:#fff;color:#565656;font-size:14px;cursor:pointer}#uploader .statusBar .btns .uploadBtn.state-paused:hover,#uploader .statusBar .btns .uploadBtn.state-uploading:hover,#uploader .statusBar .btns .uploadBtn:hover,#uploader .statusBar .btns .webuploader-pick-hover{background:#f0f0f0}#uploader .statusBar .btns .uploadBtn{border-color:transparent;background:#00b7ee;color:#fff}#uploader .statusBar .btns .uploadBtn:hover{background:#00a2d4}#uploader .statusBar .btns .uploadBtn.disabled{opacity:.6;pointer-events:none}
