修改超链接的颜色, 避免其在黑暗模式下显得突兀.

--- a/public/css/mdui.css
+++ b/public/css/mdui.css
@@ -7,6 +7,10 @@ body {
     font-family: Roboto, Noto Sans SC, Noto, Helvetica, Arial, sans-serif
 }
 
+body a {
+    color: pink  
+}
+
 .mdui-container {
     max-width: 950px
 }
